--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-<htmml background=#"00000">
-  Hello World!
-</htmml>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hit Play - Coming Soon</title>
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            background-color: #000;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2rem;
+            letter-spacing: 1px;
+        }
+
+        @media (min-width: 768px) {
+            h1 { font-size: 3rem; }
+        }
+    </style>
+</head>
+<body>
+    <h1>New Hit Play website coming soon</h1>
+</body>
+</html>
