--- a/index.html
+++ b/index.html
@@ -4,26 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hit Play - Coming Soon</title>
+
     <style>
-        body {
+        * {
             margin: 0;
-            height: 100vh;
-            background-color: #000;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: #000;
             color: #fff;
+            font-family: Arial, Helvetica, sans-serif;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: Arial, Helvetica, sans-serif;
             text-align: center;
         }
 
         h1 {
             font-size: 2rem;
-            letter-spacing: 1px;
+            line-height: 1.4;
         }
 
         @media (min-width: 768px) {
-            h1 { font-size: 3rem; }
+            h1 {
+                font-size: 3rem;
+            }
         }
     </style>
 </head>
