--- a/index.html
+++ b/index.html
@@ -23,19 +23,24 @@
             text-align: center;
         }
 
-        h1 {
+        .text-block {
+            text-transform: uppercase;
             font-size: 2rem;
             line-height: 1.4;
         }
 
         @media (min-width: 768px) {
-            h1 {
+            .text-block {
                 font-size: 3rem;
             }
         }
     </style>
 </head>
 <body>
-    <h1>New Hit Play website coming soon</h1>
+    <div class="text-block">
+        <div>New</div>
+        <div>Hit Play</div>
+        <div>Website Coming Soon</div>
+    </div>
 </body>
 </html>
