--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hit Play - Coming Soon</title>
 
     <style>
@@ -39,8 +39,8 @@
 <body>
     <div class="text-block">
         <div>New</div>
-        <div>Hit Play</div>
-        <div>Website Coming Soon</div>
+        <div>Hit Play Website</div>
+        <div>Coming Soon</div>
     </div>
 </body>
 </html>
