--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hit Play - Coming Soon</title>
 
+    <!-- 2000s Pop Punk Style Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
     <style>
         * {
             margin: 0;
@@ -15,7 +18,7 @@
         body {
             background: #000;
             color: #fff;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Bebas Neue', Arial, sans-serif;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -25,13 +28,14 @@
 
         .text-block {
             text-transform: uppercase;
-            font-size: 2rem;
-            line-height: 1.4;
+            font-size: 2.5rem;
+            letter-spacing: 2px;
+            line-height: 1.1;
         }
 
         @media (min-width: 768px) {
             .text-block {
-                font-size: 3rem;
+                font-size: 4.5rem;
             }
         }
     </style>
