--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
       text-align: center;
     }
 
+    /* Hero Section */
     .hero {
       flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 2rem;
     }
 
     .text-block {
@@ -44,65 +46,22 @@
       }
     }
 
+    /* Videos Section */
     .videos-section {
-      padding: 2rem 1rem;
+      padding: 3rem 1rem;
       background: #111;
     }
 
     .videos-section h2 {
       margin-bottom: 1rem;
-      font-size: 2rem;
+      font-size: 2.5rem;
       text-transform: uppercase;
     }
 
-    .video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* Filters */
+    .filters {
+      margin-bottom: 2rem;
+      display: flex;
+      justify-content: center;
       gap: 1rem;
-    }
-
-    .video-grid iframe {
-      width: 100%;
-      height: 200px;
-      border: none;
-    }
-
-    @media (min-width: 768px) {
-      .video-grid iframe {
-        height: 300px;
-      }
-    }
-
-    .footer {
-      padding: 1rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="hero">
-    <div class="text-block">
-      <div>NEW</div>
-      <div>HIT PLAY WEBSITE</div>
-      <div>COMING SOON</div>
-    </div>
-  </div>
-
-  <div class="videos-section">
-    <h2>VIDEOS</h2>
-    <div class="video-grid">
-      <!-- Example video embeds from Florida Punk Archivist channel -->
-      <iframe src="https://www.youtube.com/embed/WJdZaOJPA7I" allowfullscreen></iframe> <!-- NOFX final US show :contentReference[oaicite:0]{index=0} -->
-      <iframe src="https://www.youtube.com/embed/Zpk1yvpMyGQ" allowfullscreen></iframe> <!-- Jimmy Eat World Warped Tour :contentReference[oaicite:1]{index=1} -->
-      <iframe src="https://www.youtube.com/embed/4Bp_lgDdu08" allowfullscreen></iframe> <!-- Watching Pennywise in Orlando :contentReference[oaicite:2]{index=2} -->
-      <iframe src="https://www.youtube.com/embed/QCKoSx9yPSY" allowfullscreen></iframe> <!-- Caught Inside – The Siren :contentReference[oaicite:3]{index=3} -->
-    </div>
-  </div>
-
-  <div class="footer">
-    <p>
-      More from the <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank"
-        >Florida Punk Archivist YouTube channel</a>.
-    </p>
-  </div>
-</body>
-</html>
+      flex-w
