--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       background: #000;
       color: #fff;
       font-family: 'Bebas Neue', Arial, sans-serif;
+      text-align: center;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      text-align: center;
     }
 
-    /* Hero Section */
+    /* HERO SECTION */
     .hero {
       flex: 1;
       display: flex;
@@ -35,33 +35,3 @@
 
     .text-block {
       text-transform: uppercase;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      line-height: 1.1;
-    }
-
-    @media (min-width: 768px) {
-      .text-block {
-        font-size: 4.5rem;
-      }
-    }
-
-    /* Videos Section */
-    .videos-section {
-      padding: 3rem 1rem;
-      background: #111;
-    }
-
-    .videos-section h2 {
-      margin-bottom: 1rem;
-      font-size: 2.5rem;
-      text-transform: uppercase;
-    }
-
-    /* Filters */
-    .filters {
-      margin-bottom: 2rem;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-w
