--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Hit Play — New website coming soon. Watch videos from the Florida Punk Archivist." />
   <title>Hit Play - Coming Soon</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
@@ -46,7 +47,7 @@
       }
     }
 
-    /* VIDEOS */
+    /* VIDEOS SECTION */
     .videos-section {
       background: #111;
       padding: 3rem 1rem;
@@ -70,11 +71,16 @@
       padding: 0.5rem 1rem;
       border: none;
       border-radius: 4px;
+      background: #222;
+      color: #fff;
     }
 
     .video-grid {
       display: grid;
       gap: 2rem;
+      width: 100%;
+      max-width: 1400px;
+      margin: 0 auto;
     }
 
     .video-item {
@@ -96,6 +102,7 @@
       }
     }
 
+    /* FOOTER */
     .footer {
       padding: 2rem 1rem;
       font-size: 1.2rem;
@@ -140,19 +147,19 @@
     <!-- VIDEO GRID -->
     <div id="videoGrid" class="video-grid">
       <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/WJdZaOJPA7I" allowfullscreen></iframe>
+        <iframe title="Video 1" src="https://www.youtube.com/embed/WJdZaOJPA7I" allowfullscreen></iframe>
       </div>
 
       <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/Zpk1yvpMyGQ" allowfullscreen></iframe>
+        <iframe title="Video 2" src="https://www.youtube.com/embed/Zpk1yvpMyGQ" allowfullscreen></iframe>
       </div>
 
       <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/4Bp_lgDdu08" allowfullscreen></iframe>
+        <iframe title="Video 3" src="https://www.youtube.com/embed/4Bp_lgDdu08" allowfullscreen></iframe>
       </div>
 
       <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/QCKoSx9yPSY" allowfullscreen></iframe>
+        <iframe title="Video 4" src="https://www.youtube.com/embed/QCKoSx9yPSY" allowfullscreen></iframe>
       </div>
     </div>
   </div>
