--- a/index.html
+++ b/index.html
@@ -144,24 +144,8 @@
       </select>
     </div>
 
-    <!-- VIDEO GRID -->
-    <div id="videoGrid" class="video-grid">
-      <div class="video-item">
-        <iframe title="Video 1" src="https://www.youtube.com/embed/WJdZaOJPA7I" allowfullscreen></iframe>
-      </div>
-
-      <div class="video-item">
-        <iframe title="Video 2" src="https://www.youtube.com/embed/Zpk1yvpMyGQ" allowfullscreen></iframe>
-      </div>
-
-      <div class="video-item">
-        <iframe title="Video 3" src="https://www.youtube.com/embed/4Bp_lgDdu08" allowfullscreen></iframe>
-      </div>
-
-      <div class="video-item">
-        <iframe title="Video 4" src="https://www.youtube.com/embed/QCKoSx9yPSY" allowfullscreen></iframe>
-      </div>
-    </div>
+    <!-- AUTO-POPULATING VIDEO GRID -->
+    <div id="videoGrid" class="video-grid"></div>
   </div>
 
   <!-- FOOTER -->
@@ -190,6 +174,52 @@
     columns.addEventListener("change", updateGrid);
 
     updateGrid();
+  </script>
+
+  <!-- VERSION 1: AUTOLOAD ALL VIDEOS FROM PLAYLIST (NO API KEY) -->
+  <script>
+    const playlistId = "UU63N1yWiGhzL2E9hcfFDJoQ"; // Florida Punk Archivist uploads
+
+    async function loadPlaylistVideos() {
+      const url = `https://www.youtube.com/feeds/videos.xml?playlist_id=${playlistId}`;
+
+      try {
+        const response = await fetch(url);
+        const text = await response.text();
+
+        const parser = new DOMParser();
+        const xml = parser.parseFromString(text, "text/xml");
+
+        const entries = Array.from(xml.getElementsByTagName("entry"));
+
+        grid.innerHTML = ""; // Clear any old videos
+
+        entries.forEach(entry => {
+          const videoId = entry.getElementsByTagName("yt:videoId")[0].textContent;
+          const title = entry.getElementsByTagName("title")[0].textContent;
+
+          const item = document.createElement("div");
+          item.className = "video-item";
+
+          item.innerHTML = `
+            <iframe 
+              title="${title}" 
+              src="https://www.youtube.com/embed/${videoId}" 
+              allowfullscreen>
+            </iframe>
+          `;
+
+          grid.appendChild(item);
+        });
+
+        updateGrid(); // apply layout rules after videos load
+
+      } catch (error) {
+        console.error("Error fetching playlist:", error);
+      }
+    }
+
+    loadPlaylistVideos();
   </script>
 
 </body>
