--- a/index.html
+++ b/index.html
@@ -90,26 +90,7 @@
       transition: transform 0.2s;
     }
 
-    /* Dim overlay for hover/tap */
-    .video-thumb::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0);
-      transition: background 0.2s;
-      border-radius: 10px;
-      pointer-events: none;
-    }
-
-    .video-thumb:hover::before,
-    .video-thumb:active::before {
-      background: rgba(0, 0, 0, 0.3);
-    }
-
-    /* Play icon overlay */
+    /* Dim overlay */
     .video-thumb::after {
       content: '▶';
       position: absolute;
@@ -128,6 +109,11 @@
       color: rgba(255, 255, 255, 1);
     }
 
+    .video-thumb:hover img,
+    .video-thumb:active img {
+      transform: scale(1.05);
+    }
+
     /* Fade-in for thumbnails */
     .video-thumb img {
       display: block;
@@ -142,9 +128,24 @@
       opacity: 1;
     }
 
-    .video-thumb:hover img,
-    .video-thumb:active img {
-      transform: scale(1.05);
+    /* Spinner */
+    .video-thumb.loading::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 40px;
+      height: 40px;
+      margin: -20px 0 0 -20px;
+      border: 4px solid rgba(255, 255, 255, 0.3);
+      border-top-color: #fff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      pointer-events: none;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
 
     .video-thumb-title {
@@ -197,7 +198,6 @@
     </a>
   </div>
 
-  <!-- SCRIPTS -->
   <script>
     const videoGrid = document.getElementById("videoGrid");
     let currentPlaying = null;
@@ -211,7 +211,8 @@
 
         videos.forEach(video => {
           const div = document.createElement("div");
-          div.className = "video-thumb";
+          div.className = "video-thumb loading"; // spinner
+
           div.innerHTML = `
             <img data-src="${video.videoThumbnails[0].url}" alt="${video.title}" loading="lazy">
             <div class="video-thumb-title">${video.title}</div>
@@ -220,46 +221,51 @@
           originalContent.set(div, div.innerHTML);
           videoGrid.appendChild(div);
 
+          // Click to play one video at a time
           div.addEventListener("click", () => {
             if (currentPlaying === div) {
               div.innerHTML = originalContent.get(div);
               currentPlaying = null;
+              initLazyLoad(); // re-init lazy load for replaced img
               return;
             }
-
             if (currentPlaying) {
               currentPlaying.innerHTML = originalContent.get(currentPlaying);
+              initLazyLoad();
             }
-
             div.innerHTML = `
               <iframe src="https://www.youtube.com/embed/${video.videoId}" allowfullscreen loading="lazy"></iframe>
               <div class="video-thumb-title">${video.title}</div>
             `;
-
             currentPlaying = div;
           });
         });
 
-        // Lazy-load images with fade-in
-        const lazyImages = document.querySelectorAll('img[data-src]');
-        const observer = new IntersectionObserver((entries, obs) => {
-          entries.forEach(entry => {
-            if (entry.isIntersecting) {
-              const img = entry.target;
-              img.src = img.dataset.src;
-              img.onload = () => img.classList.add('loaded');
-              img.removeAttribute('data-src');
-              obs.unobserve(img);
-            }
-          });
-        }, { rootMargin: "100px" });
-
-        lazyImages.forEach(img => observer.observe(img));
+        initLazyLoad();
 
       } catch (err) {
         console.error("Error fetching videos:", err);
         videoGrid.innerHTML = "<p>Unable to load videos at this time.</p>";
       }
+    }
+
+    function initLazyLoad() {
+      const lazyImages = document.querySelectorAll('img[data-src]');
+      const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            const img = entry.target;
+            img.src = img.dataset.src;
+            img.onload = () => {
+              img.classList.add('loaded');
+              img.parentElement.classList.remove('loading'); // remove spinner
+            };
+            img.removeAttribute('data-src');
+            obs.unobserve(img);
+          }
+        });
+      }, { rootMargin: "100px" });
+      lazyImages.forEach(img => observer.observe(img));
     }
 
     fetchVideos();
