--- a/index.html
+++ b/index.html
@@ -1,275 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hit Play - Coming Soon</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hit Play - Coming Soon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background: #000;
-      color: #fff;
-      font-family: 'Bebas Neue', Arial, sans-serif;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    /* HERO SECTION */
-    .hero {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 2rem;
-    }
-
-    .text-block {
-      text-transform: uppercase;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      line-height: 1.1;
-    }
-
-    @media (min-width: 768px) {
-      .text-block {
-        font-size: 4.5rem;
-      }
-    }
-
-    /* VIDEOS */
-    .videos-section {
-      background: #111;
-      padding: 3rem 1rem;
-    }
-
-    .videos-section h2 {
-      font-size: 2.3rem;
-      margin-bottom: 2rem;
-    }
-
-    .video-grid {
-      display: grid;
-      gap: 2rem;
-      grid-template-columns: 1fr; /* default 1 column */
-    }
-
-    @media (min-width: 480px) {
-      .video-grid {
-        grid-template-columns: repeat(2, 1fr); /* phones in landscape or larger phones */
-      }
-    }
-
-    @media (min-width: 768px) {
-      .video-grid {
-        grid-template-columns: repeat(2, 1fr); /* tablets */
-      }
-    }
-
-    @media (min-width: 1024px) {
-      .video-grid {
-        grid-template-columns: repeat(3, 1fr); /* desktop */
-      }
-    }
-
-    .video-thumb {
-      position: relative;
-      cursor: pointer;
-      overflow: hidden;
-      border-radius: 10px;
-      background: #000;
-      transition: transform 0.2s;
-    }
-
-    /* Dim overlay */
-    .video-thumb::after {
-      content: '▶';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 3rem;
-      color: rgba(255, 255, 255, 0.8);
-      pointer-events: none;
-      transition: transform 0.2s, color 0.2s;
-    }
-
-    .video-thumb:hover::after,
-    .video-thumb:active::after {
-      transform: translate(-50%, -50%) scale(1.2);
-      color: rgba(255, 255, 255, 1);
-    }
-
-    .video-thumb:hover img,
-    .video-thumb:active img {
-      transform: scale(1.05);
-    }
-
-    /* Fade-in for thumbnails */
-    .video-thumb img {
-      display: block;
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      transition: transform 0.2s, opacity 0.5s ease-in;
-      opacity: 0;
-    }
-
-    .video-thumb img.loaded {
-      opacity: 1;
-    }
-
-    /* Spinner */
-    .video-thumb.loading::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 40px;
-      height: 40px;
-      margin: -20px 0 0 -20px;
-      border: 4px solid rgba(255, 255, 255, 0.3);
-      border-top-color: #fff;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      pointer-events: none;
-    }
-
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-
-    .video-thumb-title {
-      margin-top: 0.5rem;
-      font-size: 1rem;
-      color: #fff;
-      text-align: center;
-    }
-
-    iframe {
-      width: 100%;
-      border-radius: 10px;
-      border: none;
-      aspect-ratio: 16 / 9;
-    }
-
-    .footer {
-      padding: 2rem 1rem;
-      font-size: 1.2rem;
-    }
-
-    .footer a {
-      color: #00aaff;
-      text-decoration: none;
-    }
-  </style>
+<style>
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body {
+    background:#000;
+    color:#fff;
+    font-family:'Bebas Neue', Arial, sans-serif;
+    text-align:center;
+    display:flex;
+    flex-direction:column;
+    min-height:100vh;
+  }
+  .hero {
+    flex:1;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:2rem;
+  }
+  .text-block {
+    text-transform:uppercase;
+    font-size:2.5rem;
+    letter-spacing:2px;
+    line-height:1.1;
+  }
+  @media (min-width:768px){ .text-block{ font-size:4.5rem; } }
+  .videos-section { background:#111; padding:3rem 1rem; }
+  .videos-section h2{ font-size:2.3rem; margin-bottom:2rem; }
+  .video-grid { display:grid; gap:2rem; }
+  .video-item iframe { width:100%; border-radius:10px; border:none; }
+  @media(max-width:599px){ .video-grid{grid-template-columns:1fr;} .video-item iframe{height:200px;} }
+  @media(min-width:600px) and (max-width:1023px){ .video-grid{grid-template-columns:repeat(2,1fr);} .video-item iframe{height:250px;} }
+  @media(min-width:1024px){ .video-grid{grid-template-columns:repeat(3,1fr);} .video-item iframe{height:300px;} }
+  .footer{ padding:2rem 1rem; font-size:1.2rem; }
+  .footer a{ color:#00aaff; text-decoration:none; }
+</style>
 </head>
 <body>
 
-  <!-- HERO SECTION -->
-  <div class="hero">
-    <div class="text-block">
-      <div>NEW</div>
-      <div>HIT PLAY WEBSITE</div>
-      <div>COMING SOON</div>
-    </div>
+<div class="hero">
+  <div class="text-block">
+    <div>NEW</div>
+    <div>HIT PLAY WEBSITE</div>
+    <div>COMING SOON</div>
   </div>
+</div>
 
-  <!-- VIDEOS SECTION -->
-  <div class="videos-section">
-    <h2>VIDEOS</h2>
-    <div id="videoGrid" class="video-grid"></div>
-  </div>
+<div class="videos-section">
+  <h2>VIDEOS</h2>
+  <div id="videoGrid" class="video-grid"></div>
+</div>
 
-  <!-- FOOTER -->
-  <div class="footer">
-    More from the 
-    <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
-      Florida Punk Archivist
-    </a>
-  </div>
+<div class="footer">
+  More from the 
+  <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
+    Florida Punk Archivist
+  </a>
+</div>
 
-  <script>
-    const videoGrid = document.getElementById("videoGrid");
-    let currentPlaying = null;
-    let originalContent = new Map();
+<script>
+const videoGrid = document.getElementById('videoGrid');
+const channelId = 'UC63N1yWiGhzL2E9hcfFDJoQ';
 
-    async function fetchVideos() {
-      try {
-        const response = await fetch('https://yewtu.be/api/v1/channels/UC63N1yWiGhzL2E9hcfFDJoQ');
-        const data = await response.json();
-        const videos = data.videos;
+async function fetchVideos() {
+  try {
+    const rssUrl = `https://www.youtube.com/feeds/videos.xml?channel_id=${channelId}`;
+    const res = await fetch(rssUrl);
+    const text = await res.text();
+    const parser = new DOMParser();
+    const xml = parser.parseFromString(text, "application/xml");
+    const items = xml.querySelectorAll("entry");
+    
+    if(!items.length) throw new Error('No videos found');
 
-        videos.forEach(video => {
-          const div = document.createElement("div");
-          div.className = "video-thumb loading"; // spinner
+    items.forEach(item => {
+      const link = item.querySelector("link").getAttribute("href");
+      const videoId = new URL(link).searchParams.get("v");
+      const div = document.createElement('div');
+      div.className = 'video-item';
+      div.innerHTML = `<iframe src="https://www.youtube.com/embed/${videoId}?enablejsapi=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>`;
+      videoGrid.appendChild(div);
+    });
 
-          div.innerHTML = `
-            <img data-src="${video.videoThumbnails[0].url}" alt="${video.title}" loading="lazy">
-            <div class="video-thumb-title">${video.title}</div>
-          `;
+    setupSinglePlay();
+  } catch(err){
+    console.error(err);
+    videoGrid.innerHTML = '<p>Unable to load videos at this time.</p>';
+  }
+}
 
-          originalContent.set(div, div.innerHTML);
-          videoGrid.appendChild(div);
+let players = [];
+function setupSinglePlay() {
+  const tag = document.createElement('script');
+  tag.src = "https://www.youtube.com/iframe_api";
+  document.body.appendChild(tag);
+}
 
-          // Click to play one video at a time
-          div.addEventListener("click", () => {
-            if (currentPlaying === div) {
-              div.innerHTML = originalContent.get(div);
-              currentPlaying = null;
-              initLazyLoad(); // re-init lazy load for replaced img
-              return;
-            }
-            if (currentPlaying) {
-              currentPlaying.innerHTML = originalContent.get(currentPlaying);
-              initLazyLoad();
-            }
-            div.innerHTML = `
-              <iframe src="https://www.youtube.com/embed/${video.videoId}" allowfullscreen loading="lazy"></iframe>
-              <div class="video-thumb-title">${video.title}</div>
-            `;
-            currentPlaying = div;
-          });
-        });
-
-        initLazyLoad();
-
-      } catch (err) {
-        console.error("Error fetching videos:", err);
-        videoGrid.innerHTML = "<p>Unable to load videos at this time.</p>";
-      }
-    }
-
-    function initLazyLoad() {
-      const lazyImages = document.querySelectorAll('img[data-src]');
-      const observer = new IntersectionObserver((entries, obs) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            const img = entry.target;
-            img.src = img.dataset.src;
-            img.onload = () => {
-              img.classList.add('loaded');
-              img.parentElement.classList.remove('loading'); // remove spinner
-            };
-            img.removeAttribute('data-src');
-            obs.unobserve(img);
+function onYouTubeIframeAPIReady() {
+  const iframes = videoGrid.querySelectorAll('iframe');
+  iframes.forEach((iframe, i) => {
+    const player = new YT.Player(iframe, {
+      events:{
+        'onStateChange': e=>{
+          if(e.data === YT.PlayerState.PLAYING){
+            players.forEach((p,j)=>{ if(i!==j)p.pauseVideo(); });
           }
-        });
-      }, { rootMargin: "100px" });
-      lazyImages.forEach(img => observer.observe(img));
-    }
+        }
+      }
+    });
+    players.push(player);
+  });
+}
 
-    fetchVideos();
-  </script>
+fetchVideos();
+</script>
 
 </body>
 </html>
