--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hit Play - Coming Soon</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
@@ -18,6 +18,8 @@
     flex-direction:column;
     min-height:100vh;
   }
+
+  /* HERO SECTION */
   .hero {
     flex:1;
     display:flex;
@@ -31,14 +33,25 @@
     letter-spacing:2px;
     line-height:1.1;
   }
-  @media (min-width:768px){ .text-block{ font-size:4.5rem; } }
+  @media(min-width:768px){ .text-block{ font-size:4.5rem; } }
+
+  /* VIDEOS SECTION */
   .videos-section { background:#111; padding:3rem 1rem; }
   .videos-section h2{ font-size:2.3rem; margin-bottom:2rem; }
   .video-grid { display:grid; gap:2rem; }
-  .video-item iframe { width:100%; border-radius:10px; border:none; }
-  @media(max-width:599px){ .video-grid{grid-template-columns:1fr;} .video-item iframe{height:200px;} }
-  @media(min-width:600px) and (max-width:1023px){ .video-grid{grid-template-columns:repeat(2,1fr);} .video-item iframe{height:250px;} }
-  @media(min-width:1024px){ .video-grid{grid-template-columns:repeat(3,1fr);} .video-item iframe{height:300px;} }
+
+  /* Responsive grid */
+  @media(max-width:599px){ .video-grid{grid-template-columns:1fr;} iframe{height:200px;} }
+  @media(min-width:600px) and (max-width:1023px){ .video-grid{grid-template-columns:repeat(2,1fr);} iframe{height:250px;} }
+  @media(min-width:1024px){ .video-grid{grid-template-columns:repeat(3,1fr);} iframe{height:300px;} }
+
+  .video-item iframe {
+    width:100%;
+    border-radius:10px;
+    border:none;
+  }
+
+  /* FOOTER */
   .footer{ padding:2rem 1rem; font-size:1.2rem; }
   .footer a{ color:#00aaff; text-decoration:none; }
 </style>
@@ -69,6 +82,7 @@
 const videoGrid = document.getElementById('videoGrid');
 const channelId = 'UC63N1yWiGhzL2E9hcfFDJoQ';
 
+// Fetch YouTube RSS directly
 async function fetchVideos() {
   try {
     const rssUrl = `https://www.youtube.com/feeds/videos.xml?channel_id=${channelId}`;
@@ -77,7 +91,7 @@ async function fetchVideos() {
     const parser = new DOMParser();
     const xml = parser.parseFromString(text, "application/xml");
     const items = xml.querySelectorAll("entry");
-    
+
     if(!items.length) throw new Error('No videos found');
 
     items.forEach(item => {
@@ -96,6 +110,7 @@ async function fetchVideos() {
   }
 }
 
+// Ensure only one video plays at a time
 let players = [];
 function setupSinglePlay() {
   const tag = document.createElement('script');
@@ -105,12 +120,12 @@ function setupSinglePlay() {
 
 function onYouTubeIframeAPIReady() {
   const iframes = videoGrid.querySelectorAll('iframe');
-  iframes.forEach((iframe, i) => {
-    const player = new YT.Player(iframe, {
+  iframes.forEach((iframe,i)=>{
+    const player = new YT.Player(iframe,{
       events:{
         'onStateChange': e=>{
           if(e.data === YT.PlayerState.PLAYING){
-            players.forEach((p,j)=>{ if(i!==j)p.pauseVideo(); });
+            players.forEach((p,j)=>{ if(i!==j) p.pauseVideo(); });
           }
         }
       }
